--- a/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
+++ b/force-app/main/default/classes/ABSLI_CreateCaseValidationsController.cls
@@ -1,4 +1,3 @@
-
 /*********************************************************
 *Class        :  ABSLI_CreateCaseValidationsController
 *Author       :  Aditya Mehrotra
@@ -9,33 +8,25 @@
 public without sharing class ABSLI_CreateCaseValidationsController {
     
     @AuraEnabled
-    public static Map<String,String> redirectToCustomerPortalValidation(String caseId){
-        Case c = [SELECT Id, ABSLI_Case_Detail__c FROM Case WHERE Id=:caseId];
-        if(c.ABSLI_Case_Detail__c!=null){
-        	ABSLI_Case_Detail__c caseExt = [SELECT Id, Reinstatement_Amount__c, COI_Covid_Quest__c, Medicals__c, Remarks__c, COI_Signed_Date__c
-                                           FROM ABSLI_Case_Detail__c WHERE Id=:c.ABSLI_Case_Detail__c];
-            Map<String,String> fieldNamesAndTypes = ABSLI_Constants.FIELD_AND_TYPE_FOR_CUSTOMER_PORTAL_REDIRECTION;
-            List<String> blankFields = new List<String>();
-            
-            for(String field : fieldNamesAndTypes.keySet()){
-              	Object fieldValue = caseExt.get(field);
-            	String fieldType = fieldNamesAndTypes.get(field);
-                if (fieldType == 'String' && String.isBlank((String)fieldValue)) {
-                    blankFields.add(field);
-                } else if (fieldType == 'Decimal' && (fieldValue == null || ((Decimal)fieldValue) == 0)) {
-                    blankFields.add(field);
-                } else if (fieldType == 'Date' && fieldValue == null) {
-                    blankFields.add(field);
+    public static String penalInterestPayoutSaralHealthValidation(String caseRecord){
+        try {
+            Asset policy = ABSLI_CreateCaseValidationsController.getPolicyDetails(caseRecord);
+            if(policy!=null){
+                if(policy.Plan_Name__c==ABSLI_Constants.SARAL_HEALTH_PLAN_NAME){
+                    return 'Success';
+                }else{
+                    return 'Policy is not eligible for Penal Interest Payout - Saral Health Reimbursement.';
                 }
             }
+            return 'User is not eligible';
             
-            if (!blankFields.isEmpty()) {
-                return new Map<String,String>{'error'=>'The following fields are blank: ' + String.join(blankFields, ', ')};
-            }else{
-                return new Map<String,String>{'success'=>'Validation pass'};
-            }
-        }else{
-            return new Map<String,String>{'error'=>'Not eligible'};
+        } catch (Exception e) {
+            System.debug('@@@mess' + e.getMessage() + ' ' + e.getLineNumber());
+            ABCL_Logger.enableExceptionLogging();
+            ABCL_Logger.push('ABSLI_Penal Interest Payout - Saral Health Reimbursement Case creation validation');
+            ABCL_Logger.message(e.getMessage());
+            ABCL_Logger.emit();
+            throw new AuraHandledException(e.getMessage());
         }
     }
 
@@ -152,23 +143,41 @@ public without sharing class ABSLI_CreateCaseValidationsController {
                 	effectiveDateTime = DateTime.newInstance(policy.Effective_Date__c.year(), policy.Effective_Date__c.month(),policy.Effective_Date__c.day());    
                 }
                	requestWrap.effective_date = policy.Effective_Date__c!=null ? (effectiveDateTime.format('dd-MM-yyyy')) : '';
+                requestWrap.source = ABSLI_Constants.GEN_FUND_SOURCE;
                 ABCL_IntegrationCallout.IntegrationResponseWrapper genFundResponse = ABCL_IntegrationCallout.executeCallout(ABSLI_Constants.POLICY_GEN_FUND_INTEGRATION_METADATA,
                                                                                                                     JSON.serialize(requestWrap),
                                                                                                                     null);
                 if(String.isNotBlank(genFundResponse.responseBody) && genFundResponse.statusCode == 200){
                		GenFundResponseWrapper responseWrapper = (GenFundResponseWrapper)JSON.deserialize(genFundResponse.responseBody,GenFundResponseWrapper.class);
-                    if(responseWrapper.ProcessCode=='00'){
+                    if(responseWrapper.BFID_RESPONSE.ProcessCode=='00'){
                         ABSLI_Case_Detail__c caseExt = new ABSLI_Case_Detail__c(Id=String.valueOf(jsonMap.get('ABSLI_Case_Detail__c')));
-                        if(Decimal.valueOf(responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE)>0 || !String.isBlank(responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE)){
-                            caseExt.Max_Loan_Amount__c = Decimal.valueOf(responseWrapper.MAX_LOAD_AMOUNT_AVAILABLE);
-                        }else{
-                            return 'Maximum loan amount not specified.';
-                        }
-                        if(Decimal.valueOf(responseWrapper.MINIMUM_LOAN_AMT)>0 || !String.isBlank(responseWrapper.MINIMUM_LOAN_AMT)){
-                        	caseExt.Min_Loan_Amount__c = Decimal.valueOf(responseWrapper.MINIMUM_LOAN_AMT);    
-                        }else{
-                            caseExt.Min_Loan_Amount__c = Decimal.valueOf(Label.ABSLI_Min_Loan_Amount);
-                        }
+                        if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PCPT033'){
+                         	if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE)){
+                                caseExt.Max_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MAX_LOAD_AMOUNT_AVAILABLE);
+                            }else{
+                                return 'Maximum loan amount should be more than 0.';
+                            }
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT)){
+                                caseExt.Min_Loan_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_LOAN_AMT);    
+                            }else{
+                                caseExt.Min_Loan_Amount__c = Decimal.valueOf(Label.ABSLI_Min_Loan_Amount);
+                            }   
+                        }/*else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PPAY008'){
+                           	if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT)){
+                                caseExt.Minimum_Withdrawal_Amount__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.MINIMUM_WITHDRAWAL_AMT);
+                            }
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE)){
+                                caseExt.Withdrawal_Amount_Available__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.WITHDRAWL_AMOUNT_AVAILABLE);    
+                            }else{
+                                return 'Withdrawal amount available should be more than 0.';
+                            } 
+                        }else if(String.valueOf(jsonMap.get('CCC_External_Id__c'))=='PPAY001'){
+                            if(Decimal.valueOf(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE)>0 && !String.isBlank(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE)){
+                                caseExt.Cash_Surrender_Value__c = Decimal.valueOf(responseWrapper.BFID_RESPONSE.CASH_SURRENDER_VALUE);
+                            }else{
+                                return 'Case Surrender Value should be more than 0.';
+                            }
+                        }*/
                         update caseExt;
                     	return 'Success';    
                     }else{
@@ -244,10 +253,13 @@ public without sharing class ABSLI_CreateCaseValidationsController {
             if(policy!=null){
                 UINapiRequestWrapper request = new UINapiRequestWrapper();
                 request.POLICY_ID = policy.Policy_No__c;
-                if(policy.Effective_Date__c!=null){
+                /*if(policy.Effective_Date__c!=null){
                     DateTime effectiveDateTime = DateTime.newInstance(policy.Effective_Date__c.year(), policy.Effective_Date__c.month(),policy.Effective_Date__c.day());
                     request.EFFECTIVE_DATE = (effectiveDateTime.format('ddMMyyyy'));
-                }
+                }*/
+                Date today = Date.today();
+                DateTime todayDateTime = DateTime.newInstance(today.year(),today.month(),today.day());
+                request.EFFECTIVE_DATE = (todayDateTime.format('ddMMyyyy'));
                 request.SOURCE = ABSLI_Constants.UIN_API_SOURCE;
 
                 ABCL_IntegrationCallout.IntegrationResponseWrapper uinApiResponse = ABCL_IntegrationCallout.executeCallout(ABSLI_Constants.UIN_API_INTEGRATION_METADATA,
@@ -416,29 +428,20 @@ public without sharing class ABSLI_CreateCaseValidationsController {
     public class PolicyGenFundRequestWrapper{
         public String policy_id{get;set;}
         public String effective_date{get;set;}
+        public String source{get;set;}
     }
     
     public class GenFundResponseWrapper{
-        public String MORE_MESSAGES_IND { get; set; }
-        public String MINIMUM_WITHDRAWAL_AMT { get; set; }
-        public String ProcessCode { get; set; }
-        public String POLICY_BILLED_TO_DATE { get; set; }
-        public String MINIMUM_LOAN_AMT { get; set; }
-        public String CSV_PAYABLE_HOLD_AMOUNT { get; set; }
-        public String POLICY_BILL_MODE { get; set; }
-        public String FUND_DETAILS { get; set; }
-        public String WITHDRAWL_AMOUNT_AVAILABLE { get; set; }
-        public String navdate { get; set; }
-        public String MESSAGES_T { get; set; }
-        public String LOAN_AMOUNT_AVAILED { get; set; }
-        public String MESSAGES { get; set; }
-        public String MESSAGES_T_3 { get; set; }
-        public String MESSAGES_T_2 { get; set; }
-        public String ProcessMessage { get; set; }
-        public String MESSAGES_T_1 { get; set; }
-        public String CASH_SURRENDER_VALUE { get; set; }
-        public String MAX_LOAD_AMOUNT_AVAILABLE { get; set; }
-        public String POLICY_SA { get; set; }
+        public BfidResponse BFID_RESPONSE{get;set;}
+    }
+    
+    public class BfidResponse{
+        public String MINIMUM_WITHDRAWAL_AMT{get;set;}
+        public String ProcessCode{get;set;}
+        public String MINIMUM_LOAN_AMT{get;set;}
+        public String WITHDRAWL_AMOUNT_AVAILABLE{get;set;}
+        public String CASH_SURRENDER_VALUE{get;set;}
+        public String MAX_LOAD_AMOUNT_AVAILABLE{get;set;}
     }
 
 }
