Added Additional Fields Required

--- a/force-app/main/default/classes/ABSLI_BeforeUpdateTriggerLogic.cls
+++ b/force-app/main/default/classes/ABSLI_BeforeUpdateTriggerLogic.cls
@@ -29,7 +29,7 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
         if(!mAbsliCases.isEmpty()){
             absliCasesAdditionalFields = new Map<Id, Case>([SELECT Id,Asset.Issue_Date__c,ABSLI_Case_Detail__c,CCC_External_Id__c, 
                                        ABSLI_Case_Detail__r.To_date__c, ABSLI_Case_Detail__r.From_date__c,CaseNumber,ABSLI_Case_Detail__r.IRDAI_Token_Number__c,Nature__c,Stage__c,Technical_Source__c,
-                                       ABSLI_Case_Detail__r.Complaint_Category__c,ABSLI_Case_Detail__r.Resolve_case__c,IRDAI_Token_Number__c,IGMS_Complaint_Type_Code__c ,FTR__c
+                                       ABSLI_Case_Detail__r.Complaint_Category__c,ABSLI_Case_Detail__r.Resolve_case__c,IRDAI_Token_Number__c,IGMS_Complaint_Type_Code__c ,FTR__c, ABSLI_Case_Detail__r.IGMS_type_of_policy__c
                                        FROM Case 
                                        WHERE Id IN :mAbsliCases.keySet()]);
             System.debug('Inside ABSLI before Update Trigger logic');
@@ -160,15 +160,15 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
             Map<Id,AggregateResult> mCountOfNotCompletedChecklistOnCase = new Map<Id,AggregateResult>(
                 [SELECT Case__c Id, COUNT(ID) FROM ASF_Checklist__c 
                  WHERE Status__c IN: ABSLI_Constants.CHECKLIST_FAILURE_STATUS
-                                                      AND Case__c =: eligibleCases.keySet()
-                                                      AND Mandatory__c = TRUE
+                 AND Case__c =: eligibleCases.keySet()
+                 AND Mandatory__c = TRUE
                  GROUP BY Case__c
                  HAVING COUNT(ID) > 0]);
             for(Case c : eligibleCases.values()){
                 if(mCountOfNotCompletedChecklistOnCase.containsKey(c.Id)){
-                        c.Reject_Case__c = true;
-                        c.Auto_Rejected__c = true;
-                        c.MoveToNext__c = false;
+                    c.Reject_Case__c = true;
+                    c.Auto_Rejected__c = true;
+                    c.MoveToNext__c = false;
                 }
             }
         }              
@@ -218,7 +218,7 @@ public with sharing class ABSLI_BeforeUpdateTriggerLogic {
                         newMap.put(caseRec.Id,caseError);
                 }
                 if(caseRec.IGMS_Complaint_Type_Code__c != null &&
-                  	caseRec.Nature__c == 'Complaint' && 
+                  	caseRec.Nature__c == 'Complaint' &&
                     caseRec.ABSLI_Case_Detail__r.IRDAI_Token_Number__c != null && 
                     caseRec.Technical_Source__c != 'API'){
                 	ABSLI_IGMSClassificationUtility.validationWrapper returnWrapper= ABSLI_IGMSClassificationUtility.validateCurrentSelection(mClassificationIGMS, caseRec);
