--- a/force-app/main/default/classes/ABSLI_LegacyViewController_Test.cls
+++ b/force-app/main/default/classes/ABSLI_LegacyViewController_Test.cls
@@ -87,7 +87,7 @@ public class ABSLI_LegacyViewController_Test {
         // Set mock callout class 
         Test.setMock(HttpCalloutMock.class, new ABSLI_LegacyMockResponseGenerator());
         Test.startTest();
-        ABSLI_LegacyViewController.ResponseWrapper res = ABSLI_LegacyViewController.getLegacyData('277956','','','','ABFL');
+        ABSLI_LegacyViewController.ResponseWrapper res = ABSLI_LegacyViewController.getLegacyData('277956','','','','ABFL','');
         Test.stopTest();
         System.assertEquals(200,res.statusCode, 'code');
         System.assertEquals('1', res.ReturnCode, 'return code');
@@ -97,7 +97,7 @@ public class ABSLI_LegacyViewController_Test {
         // Set mock callout class 
         Test.setMock(HttpCalloutMock.class, new ABSLI_LegacyMockFailureResponseGenerator());
         Test.startTest();
-        ABSLI_LegacyViewController.ResponseWrapper res = ABSLI_LegacyViewController.getLegacyData('27795','','','','ABFL');
+        ABSLI_LegacyViewController.ResponseWrapper res = ABSLI_LegacyViewController.getLegacyData('27795','','','','ABFL','');
         Test.stopTest();
         System.assertEquals(404,res.statusCode, 'statusCode');
     }
