--- a/force-app/main/default/classes/ABHI_DeviceDetailsController_Test.cls
+++ b/force-app/main/default/classes/ABHI_DeviceDetailsController_Test.cls
@@ -44,11 +44,13 @@ public class ABHI_DeviceDetailsController_Test {
     static void testgetDeviceDetails() {
         Account acc = [SELECT id, Client_Code__c from Account where Name = 'testAcc' LIMIT 1];
         User testUser = [SELECT id from User where LastName='User ABHI' LIMIT 1];
+        String mockRequest = '{"MemberID":' + acc.Client_Code__c + 
+            ', "OS": "android", "PolicyStartDate": "2000-12-09", WellnessID: ""}';
         // Set mock callout class
         Test.setMock(HttpCalloutMock.class, new ABHI_DeviceDetailsMockHttpResponse());
         System.runAs(testUser){
             Test.startTest();
-            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id);
+            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id, mockRequest);
             Test.stopTest();
             System.assertEquals(1000, res.StatusCode, 'code');
             System.assertEquals('Success', res.Message, 'Message');
@@ -58,11 +60,13 @@ public class ABHI_DeviceDetailsController_Test {
     static void testgetFailureDeviceDetails() {
         Account acc = [SELECT id, Client_Code__c from Account where Name = 'testAcc' LIMIT 1];
         User testUser = [SELECT id from User where LastName='User ABHI' LIMIT 1];
+        String mockRequest = '{"MemberID":' + acc.Client_Code__c + 
+            ', "OS": "android", "PolicyStartDate": "", WellnessID: ""}';
         // Set mock callout class
         Test.setMock(HttpCalloutMock.class, new ABHI_DeviceDetailsFailureResponseGenerator());
         System.runAs(testUser){
             Test.startTest();
-            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id);
+            ABHI_DeviceDetailsController.ResponseWrapper res= ABHI_DeviceDetailsController.getDeviceDetails(acc.Id, mockRequest);
             Test.stopTest();
             System.assertEquals(1001, res.StatusCode, 'code');
         }
