bug fix for bulk close case

--- a/force-app/main/default/classes/ABCL_CommonCLass.cls
+++ b/force-app/main/default/classes/ABCL_CommonCLass.cls
@@ -68,9 +68,6 @@ public with sharing class ABCL_CommonCLass {
                 else if(bussHrName.containsIgnoreCase('ABSLIG')) {
                     mapOf_BusinessUnit_To_BusinessHr.put('ABSLIG', bh);
                 }
-                else if(bussHrName.containsIgnoreCase('ABSLI')) {
-                    mapOf_BusinessUnit_To_BusinessHr.put('ABSLI', bh);
-                }
             }
         
             for(Case csRec : newCaseLst) {  
@@ -101,12 +98,13 @@ public with sharing class ABCL_CommonCLass {
         if(!ASF_BulkCaseProcessorUtility.isBulkProcessing){return;}
 
         List<SObject> recordsToUpdate = new List<SObject>();
+        Map<Id,SObject> recordmap = new Map<Id,SObject>();
         for(Case caseRec : newItems){
             if(caseRec.Stage__c == 'Resolved' && caseRec.Stage__c != oldMap.get(caseRec.Id).Stage__c){
                 if(caseRec.ABFL_Case_Detail__c != null){
                     ABFL_Case_Detail__c detRec = new ABFL_Case_Detail__c(Id=caseRec.ABFL_Case_Detail__c);
                     detRec.Resolution_Comments__c = caseRec.Resolution_Comments__c;
-                    recordsToUpdate.add(detRec);
+                    recordmap.put(detRec.Id,detRec);                
                 }
                 if(caseRec.ABHFL_Case_Detail__c != null){
                     ABHFL_Case_Detail__c detRec = new ABHFL_Case_Detail__c(Id=caseRec.ABHFL_Case_Detail__c);
@@ -114,6 +112,7 @@ public with sharing class ABCL_CommonCLass {
                     recordsToUpdate.add(detRec);
                 }
             }
+            recordsToUpdate.add(recordmap.values());
         }
         
         if(!recordsToUpdate.isEmpty()){
@@ -169,7 +168,7 @@ public with sharing class ABCL_CommonCLass {
     public String calculateSlaOverwriteIdentifier(Integer calculateMinutes) {
         
         String slaOverwriteIdentifier = '';
-        if(calculateMinutes > 0 && calculateMinutes <= 900) {
+        if(calculateMinutes <= 900) {
             slaOverwriteIdentifier = '1';
         }
         else if(calculateMinutes > 900 && calculateMinutes <= 960) {
@@ -192,6 +191,9 @@ public with sharing class ABCL_CommonCLass {
         }
         else if(calculateMinutes > 1260 && calculateMinutes <= 1320) {
             slaOverwriteIdentifier = '8';
+        }
+        else if(calculateMinutes > 1320 && calculateMinutes <= 1440) {
+            slaOverwriteIdentifier = '1';
         }
         return slaOverwriteIdentifier;
     }
