ABHFL_CTSTHelper(PR970457-2176)

--- a/force-app/main/default/classes/ABHFL_CTSTHelper.cls
+++ b/force-app/main/default/classes/ABHFL_CTSTHelper.cls
@@ -357,8 +357,9 @@ public without sharing class ABHFL_CTSTHelper {
 	}
 
     //Dhinesh - Stop at banking stage on forward movement after a backward movement.
-    public static void preClosureStopAtCPUBanking(List<Case> caseList, Map<Id, Case> oldCaseMap) {
-        // List of valid subTypes
+     public static void preClosureStopAtCPUBanking(List<Case> caseList, Map<Id, Case> oldCaseMap) {
+      /*  Logic commented of this Method by Nikhil EY - PR970457-2176
+      // List of valid subTypes
     	List<String> validSubTypes = new List<String>{'qbccdd01', 'hfl060','RRSDPRSHFC01'};
         
     	for (Case caseRecord : caseList) {
@@ -377,8 +378,8 @@ public without sharing class ABHFL_CTSTHelper {
                 ASF_CaseTriggerModularHelper.preClosureStageAlreadyStamped = true;
         	}
             
-    	}
-	}
+    	} */
+	} 
     
     public static void changeStagetoCPUBanking(Case caseRecord) {
         Group CPUQueue = [SELECT Id,Name FROM Group WHERE Type = 'Queue' AND DeveloperName = 'ABHFL_CPU_Banking_Team' WITH SECURITY_ENFORCED LIMIT 1];
