Component and Controller

--- a/force-app/main/default/classes/ABHI_FAHistoryDetailsController.cls
+++ b/force-app/main/default/classes/ABHI_FAHistoryDetailsController.cls
@@ -20,9 +20,15 @@ public with sharing class ABHI_FAHistoryDetailsController {
         try {
             String integrationName = 'ABHI_FAHistoryDetails';
             ABCL_IntegrationCallout.accountId = customerId;
-            Account acc = [SELECT Client_Code__c from Account where Id =: customerId];
+            List<Account> acc = [SELECT Client_Code__c from Account where Id =: customerId];
             Map<String, String> urlParams = new Map<String, String>();
-            urlParams.put('customerId', acc.Client_Code__c);
+            String code = acc[0].Client_Code__c != null ? acc[0].Client_Code__c : '0';
+            if(code == '0'){
+                return new IntegrationResponseWrapper(
+                    400,
+                    Custom_Messages__mdt.getInstance('ABHI_Customer_Id_Mandatory').Message__c
+                );
+            }
             ABCL_IntegrationCallout.IntegrationResponseWrapper integrationResponse = ABCL_IntegrationCallout.executeCallout(integrationName,'',urlParams);
             
             if(integrationResponse.StatusCode == 1000 || integrationResponse.StatusCode == 1001) {
@@ -36,7 +42,11 @@ public with sharing class ABHI_FAHistoryDetailsController {
                 );
             }
         } catch (Exception e) {
-            throw new AuraHandledException(e.getMessage());
+            return new IntegrationResponseWrapper(
+                    400,
+                    Custom_Messages__mdt.getInstance('ABHI_UnexpectedError').Message__c,
+                    e.getMessage()
+                );
         }
     }
 
@@ -70,9 +80,15 @@ public with sharing class ABHI_FAHistoryDetailsController {
         @AuraEnabled public List<CustomerAppointmentsWrapper> customerAppointments;
         @AuraEnabled public Integer StatusCode;	
 	    @AuraEnabled public String Message;	
+	    @AuraEnabled public String error;	
         public IntegrationResponseWrapper(Integer statusCode, String responseBody){
             this.StatusCode = statusCode;
             this.Message = responseBody;
+        }
+        public IntegrationResponseWrapper(Integer statusCode, String message, String errorMessage){
+            this.StatusCode = statusCode;
+            this.Message = message;
+            this.error = errorMessage;
         }
     }
 
